--- a/package.json
+++ b/package.json
@@ -1,22 +1,15 @@
 {
-  "name": "platzi-profesional-javascript-mediaplayer",
+  "name": "platzi-media-player",
   "version": "1.0.0",
-  "description": "Proyecto del curso Profesion de JavaScript de Platzi",
-  "main": "index.js",
+  "description": "Proyecto del Curso Profesional de JavaScript de la Escuela de JavaScript de Platzi.",
+  "license": "MIT",
+  "author": "Richard B. Kaufman López <richardbkaufman@gmail.com>",
+  "keywords": [
+    "platzi"
+  ],
   "scripts": {
     "start": "live-server"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/AlbertoZavala/platzi-profesional-javascript-mediaplayer.git"
-  },
-  "keywords": [],
-  "author": "Jose Alberto Zavala Flores <jose.alberto.zavala.flores@gmail.com>",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/AlbertoZavala/platzi-profesional-javascript-mediaplayer/issues"
-  },
-  "homepage": "https://github.com/AlbertoZavala/platzi-profesional-javascript-mediaplayer#readme",
   "devDependencies": {
     "live-server": "^1.2.1"
   }
